--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url('/images/photo-1540804236945-b6ae24bfe0a9.avif');
+    background-image: url('/istockphoto-538562985-612x612.jpg');
     height: 100vh;
     background-size: cover;
     font-weight: bold;
